--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping via Mobile | Ricardo Raphael</title>
+    <title>Shopping via Mobile CSS | Ricardo Raphael</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="./img/girl-cellphone.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
